--- a/package.json
+++ b/package.json
@@ -10,8 +10,23 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.2",
+    "@tailwindcss/line-clamp": "^0.4.4",
+    "axios": "^1.6.8",
+    "chart.js": "^4.4.2",
+    "daisyui": "^4.7.3",
+    "for": "^0.0.1-dev.0",
+    "messaging": "^0.0.2",
+    "network": "^0.7.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-chartjs-2": "^5.2.0",
+    "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.1",
+    "react-icons": "^5.0.1",
+    "react-redux": "^9.1.0",
+    "react-router-dom": "^6.22.3",
+    "request": "^2.88.2",
+    "ui": "^0.2.4"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
