--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.6.8",
     "chart.js": "^4.4.2",
     "daisyui": "^4.7.3",
+    "eslint-plugin-simple-import-sort": "^12.0.0",
     "for": "^0.0.1-dev.0",
     "messaging": "^0.0.2",
     "network": "^0.7.0",
