--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "chart.js": "^4.4.2",
     "daisyui": "^4.7.3",
     "eslint-plugin-simple-import-sort": "^12.0.0",
+    "express": "^4.19.2",
     "for": "^0.0.1-dev.0",
     "messaging": "^0.0.2",
+    "morgan": "^1.10.0",
     "network": "^0.7.0",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
